third_party/move/move-vm/transactional-tests/tests/stack_size/untrusted_trusted_err.baseline.exp
processed 8 tasks
task 0 lines 1-6:  publish [module 0x3::trusted]
Error: Unable to publish module '0000000000000000000000000000000000000000000000000000000000000003::trusted'. Got VMError: {
    major_status: NEGATIVE_STACK_SIZE_WITHIN_BLOCK,
    sub_status: None,
    location: 0x3::trusted,
    indices: [(FunctionDefinition, 0)],
    offsets: [(FunctionDefinitionIndex(0), 0)],
}
task 1 lines 8-26:  publish [module 0x33::untrusted]
Error: error: unknown module `0000000000000000000000000000000000000000000000000000000000000003::trusted`
   ┌─ test:12:5
   │
12 │     call 0x3::trusted::return_20
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown module `0000000000000000000000000000000000000000000000000000000000000003::trusted`
   ┌─ test:19:5
   │
19 │     pack_closure 0x3::trusted::return_20, 0
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


task 2 lines 29-36:  publish [module 0x4::trusted]
Error: Unable to publish module '0000000000000000000000000000000000000000000000000000000000000004::trusted'. Got VMError: {
    major_status: POSITIVE_STACK_SIZE_AT_BLOCK_END,
    sub_status: None,
    location: 0x4::trusted,
    indices: [(FunctionDefinition, 0)],
    offsets: [(FunctionDefinitionIndex(0), 0)],
}
task 3 lines 38-56:  publish [module 0x44::untrusted]
Error: error: unknown module `0000000000000000000000000000000000000000000000000000000000000004::trusted`
   ┌─ test:42:5
   │
42 │     call 0x4::trusted::return_20_30_40
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown module `0000000000000000000000000000000000000000000000000000000000000004::trusted`
   ┌─ test:49:5
   │
49 │     pack_closure 0x4::trusted::return_20_30_40, 0
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


task 4 lines 59-59:  run --verbose 0x33::untrusted::sum_10_20
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000033::untrusted doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
task 5 lines 61-61:  run --verbose 0x33::untrusted::sum_10_20_closure
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000033::untrusted doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
task 6 lines 63-63:  run --verbose 0x44::untrusted::sum_10_20_30_40
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000044::untrusted doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
task 7 lines 65-65:  run --verbose 0x44::untrusted::sum_10_20_30_40_closure
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000044::untrusted doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
